Sat 19 Feb 2022 Aleksey
	* LibRHash: add rhash_import() and rhash_export() functions

Mon 03 Jan 2022 Aleksey
	* Bugfix: fix building of the LibRHash static library on Solaris
	* Honor hash file extension in --update mode

Sun 19 Dec 2021 Aleksey
	* Support --ignore-missing option, to ignore missing files in --check mode

Sun 12 Dec 2021 Aleksey
	* Support --brief option to show verification report without header and footer
	* Bugfix: hash options were sometimes ignored in the --check mode
	* Allow simultaneous usage of --update and --check options

Fri 05 Nov 2021 Aleksey
	* Honor --lowercase option while --embed-crc is in action

Mon 01 Nov 2021 And Sch
	* Improve ripemd160 performance

Mon 01 Nov 2021 Aleksey
	* Add --bt-transmission option to create Transmission compatible torrent files

Sun 26 Sep 2021 Aleksey
	* Bugfix: star character at the start of filepath must be ignored

Wed 14 Jul 2021 Aleksey
	* === Version 1.4.2 ===
	* print 'Nothing to verify' when verifying a hash file without a message digest

Wed 14 Jul 2021 Zak Kemble
	* significantly improve file reading performance on Linux/Unix

Sun 11 Jul 2021 Aleksey
	* Bugfix: fix verification of some hash files containing spaces in file paths
	* count unparsed lines of a hash file as errors
	* print line numbers of unparsed lines of a hash file

Thu 07 Jan 2021 Aleksey
	* === Version 1.4.1 ===

Wed 06 Jan 2021 Aleksey
	* look for config file at $HOME/.config/rhash/rhashrc

Mon 04 Jan 2021 Aleksey
	* supported --blake2s, --blake2b options for the BLAKE2 hash functions

Sun 03 Jan 2021 Aleksey
	* Bugfix: fix computing of EDON-R 512 by big data chunks

Thu 24 Dec 2020 Aleksey
	* support --no-detect-by-ext option
	* speed up verification by detecting hash type from file extension

Sun 06 Dec 2020 Aleksey
	* Bugfix: correctly print long paths on Windows

Sun 22 Nov 2020 Aleksey
	* Bugfix: print correct '%{mtime}' when --file-list is specified

Sat 29 Aug 2020 Theodore Ts'o